@@ -1,5 +1,10 @@
 2005-08-05  Carl Worth  <cworth@cworth.org>
 
+	* src/cairo.c: Document the implicit closing of sub-paths for
+	cairo_fill and cairo_fill_preserve.
+
+2005-08-05  Carl Worth  <cworth@cworth.org>
+
 	* src/cairoint.h: Rename parameters to scalend_font_backend from
 	font to scaled_font.
 	
